# spiders

./: Cargo.toml  README.md  release.toml
.github/workflows/: build.yml
bibe/: CHANGELOG.md  Cargo.toml  README.md
bibe/src/: main.rs
hyraigne/: CHANGELOG.md  Cargo.toml  README.md
hyraigne/src/: error.rs  fs.rs  lib.rs  types.rs  utils.rs
hyraigne/src/sites/: mod.rs  traits.rs
hyraigne/src/sites/mangadex/: chapter.rs  mod.rs  models.rs  page.rs  series.rs  site.rs
hyraigne/src/sites/mangakakalot/: chapter.rs  mod.rs  page.rs  selectors.rs  series.rs  site.rs
hyraigne/src/sites/webtoons/: chapter.rs  page.rs  selectors.rs  series.rs  site.rs
hyraigne/src/sites/webtoonscan/: chapter.rs  mod.rs  page.rs  selectors.rs  series.rs  site.rs
hyraigne/src/spiders/: http.rs  mod.rs
hyraigne/src/types/: chapter.rs  filter.rs  mod.rs  options.rs  page.rs  pagination.rs  series.rs
hyraigne/testdata/mangadex.org/: chapter.json  series.json  series_details.json
hyraigne/testdata/mangakakalot.com/: chapter.html  series.html
hyraigne/testdata/webtoons.com/: chapter.html  series.html
hyraigne/testdata/webtoonscan.com/: chapter.html  series.html
